# Lab1_2Term

./: CMakeLists.txt  Figure.h  Rectangle.cpp  Rectangle.h  Right_Triangle.cpp  Right_Triangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  UserMenu.cpp  UserMenu.h  Vector.cpp  Vector.h  main.cpp
